--- a/app/src/main/res/layout/fragment_idiom_list.xml
+++ b/app/src/main/res/layout/fragment_idiom_list.xml
@@ -3,9 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.IdiomListFragment">
+    tools:context=".fragments.IdiomListFragment"
+    android:background="@color/design_default_color_error">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
