--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="main_theme_blue">#FFD6EFF5</color>
+    <color name="focused_color">#FF3CB371</color>
 </resources>
