--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoadingActivity"
+    tools:context=".presentation.splash.components.LoadingActivity"
     android:background="@color/main_theme_blue">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
