--- a/app/src/main/res/layout/fragment_word_list.xml
+++ b/app/src/main/res/layout/fragment_word_list.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context=".fragments.WordListFragment">
+    tools:context=".presentation.word.components.WordListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
