리팩토링 커밋 1. 리사이클러뷰 어댑터 ListAdapter 전환 및 로직 방향성 개선

--- a/app/src/main/res/layout/fragment_idiom_list.xml
+++ b/app/src/main/res/layout/fragment_idiom_list.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.IdiomListFragment"
+    tools:context=".presentation.fragments.IdiomListFragment"
     android:background="@color/design_default_color_error">
 
     <TextView
