--- a/app/src/main/res/layout/fragment_idiom_insert.xml
+++ b/app/src/main/res/layout/fragment_idiom_insert.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.IdiomInsertFragment"
+    tools:context=".presentation.fragments.IdiomInsertFragment"
     android:background="@color/black">
 
     <TextView
