--- a/app/src/main/res/layout/fragment_muitichoice.xml
+++ b/app/src/main/res/layout/fragment_muitichoice.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.MultiChoiceFragment"
+    tools:context=".presentation.fragments.MultiChoiceFragment"
     android:background="@color/design_default_color_secondary">
 
     <TextView
