리팩토링 커밋
1. SplashActivity에서 권한 체크 및 비동의 관련 로직 정의
   - 체크 후 동의 시 Service 실행
   - 비동의 시 Toast Message 실행 후 잠금화면 Service 실행 X
   - MashMellow 버전 이전 이후 관련 추가 및 registerActivityForResult 코드 수정

2. MainActivity에서 Fragment 변화 시 가끔 View 초기화되던 문제 수정
   - ViewPager Page Limit Page 수만큼 설정.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,26 +5,29 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.main.components.MainActivity">
+
     <androidx.appcompat.widget.Toolbar
+        android:id="@+id/main_toolbar"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:id="@+id/main_toolbar"
         android:background="@color/main_theme_blue">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textSize="20dp"
             android:text="@string/main_title"
             android:textColor="@color/white"
-            android:textStyle="bold"/>
+            android:textSize="20dp"
+            android:textStyle="bold" />
     </androidx.appcompat.widget.Toolbar>
+
     <LinearLayout
+        android:id="@+id/toolbar_division"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:orientation="horizontal"
-        android:id="@+id/toolbar_division"
-        android:layout_below="@+id/main_toolbar"/>
+        android:layout_below="@+id/main_toolbar"
+        android:orientation="horizontal" />
     <androidx.viewpager2.widget.ViewPager2
         android:layout_width="match_parent"
         android:layout_height="match_parent"
