리팩토링 커밋
1. LockScreen Quiz 관련 Fragment Model 부분 추가
   - Data, Domain, DI 부분 관련 코드 추가
   - Room 중복 단어 쿼리 작성 및 테스트
   - Flow 및 StateFlow first()를 활용해 최초 1번만 데이터를 가져오도록 사용

2. 구문 및 import 제거..?

--- a/app/src/main/res/layout/fragment_muitichoice.xml
+++ b/app/src/main/res/layout/fragment_muitichoice.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.fragments.MultiChoiceFragment"
+    tools:context=".presentation.quiz.components.MultiChoiceFragment"
     android:background="@color/design_default_color_secondary">
 
     <TextView
