리팩토링 커밋
1. MultiChoiceFragment 작성 중
   - GridView 작성 완료
   - 데이터 정상적으로 받아오는 것 실험 완료 (StateIn Default Value 주지 않는 것으로 결정)
   - TODO :: ViewModel에서 정답과 정답 카운트 수를 Flow로 관리하며 Fragment에서는 최초 값 주입과 관찰을 실행할 수 있도록 구조
   - TODO :: GridView 꾸미기

2. 패키지 위치 수정 및 일부 코드 수정

--- a/app/src/main/res/layout/activity_lock_screen.xml
+++ b/app/src/main/res/layout/activity_lock_screen.xml
@@ -4,32 +4,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.lockscreen.lockscreen.LockScreenActivity"
+    tools:context=".presentation.lockscreen.components.LockScreenActivity"
     android:orientation="vertical"
     android:background="@color/cardview_light_background">
+
     <TextClock
         android:id="@+id/text_clock"
         android:layout_width="match_parent"
-        android:layout_height="10dp"/>
+        android:layout_height="10dp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:orientation="horizontal"
         android:id="@+id/clock_division"
-        android:layout_below="@+id/text_clock"/>
+        android:layout_below="@+id/text_clock" />
 
     <FrameLayout
         android:id="@+id/quiz_fragments"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/viewpager_division"
-        android:layout_below="@id/clock_division" />
+        android:layout_height="wrap_content"
+        android:layout_below="@id/clock_division"
+        android:layout_above="@+id/viewpager_division" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:orientation="horizontal"
         android:id="@+id/viewpager_division"
         android:layout_above="@id/screen_off_layout"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -40,7 +44,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/remain_button_clicked"
-            android:text="5"
+            android:text="100000"
+            android:textColor="@color/black"
             android:layout_weight="1"
             android:gravity="center"
             android:layout_gravity="center"/>
