--- a/app/src/main/res/layout/fragment_muitichoice.xml
+++ b/app/src/main/res/layout/fragment_muitichoice.xml
@@ -1,14 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.quiz.components.MultiChoiceFragment"
-    android:background="@color/design_default_color_secondary">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".presentation.lockscreen.quiz.components.multichoice.MultiChoiceFragment">
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="0dp"
+        android:gravity="center_vertical|end"
+        android:id="@+id/correct_count"
+        android:text="카운트 테스트 중"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/correct_words_layout"
+        app:layout_constraintVertical_weight="1"
+        android:textColor="@color/black"/>
 
-</FrameLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:id="@+id/correct_words_layout"
+        app:layout_constraintTop_toBottomOf="@+id/correct_count"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/answer_list_gridview"
+        app:layout_constraintVertical_weight="4">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:gravity="center"
+            android:text="정답 테스트 중"
+            android:id="@+id/correct_words"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/empty_saved_words_btn"
+            app:layout_constraintVertical_weight="3"
+            app:layout_constraintVertical_chainStyle="spread"
+            android:textColor="@color/black"/>
+
+        <Button
+            android:layout_width="200dp"
+            android:layout_height="0dp"
+            android:id="@+id/empty_saved_words_btn"
+            app:layout_constraintTop_toBottomOf="@+id/correct_words"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_weight="1"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:id="@+id/answer_list_gridview"
+        app:layout_constraintTop_toBottomOf="@+id/correct_words_layout"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_chainStyle="spread"
+        app:layout_constraintVertical_weight="5"
+        tools:listitem="@layout/list_multichoice_item"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
