--- a/app/src/main/res/layout/fragment_word_list.xml
+++ b/app/src/main/res/layout/fragment_word_list.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".presentation.word.components.WordListFragment">
+    tools:context=".presentation.main.word.components.wordlist.WordListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
