--- a/app/src/main/res/layout/fragment_muitichoice.xml
+++ b/app/src/main/res/layout/fragment_muitichoice.xml
@@ -51,7 +51,8 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_weight="1"/>
+            app:layout_constraintVertical_weight="1"
+            android:visibility="gone"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -66,6 +67,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintVertical_chainStyle="spread"
         app:layout_constraintVertical_weight="5"
-        tools:listitem="@layout/list_multichoice_item"/>
+        tools:listitem="@layout/list_multichoice_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
