리팩토링 커밋
1. Dialog -> DialogFragment Migration 작업

2. 팝업 화면 기본 구격 정의 및 사용.

3. 그 외에는 뭐 했겠죠...?

--- a/app/src/main/res/layout/dialog_custom_item.xml
+++ b/app/src/main/res/layout/dialog_custom_item.xml
@@ -9,9 +9,11 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:id="@+id/dialog_part_textview"
-        android:layout_weight="1"
+        android:layout_weight="3"
         android:text="sample"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:textSize="20dp"
+        android:textStyle="bold"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="50dp"
