--- a/app/src/main/res/layout/custom_general_dialog.xml
+++ b/app/src/main/res/layout/custom_general_dialog.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -10,8 +11,8 @@
         android:gravity="center"
         android:text="@string/warning_notify"
         android:textStyle="bold"
-        android:drawableLeft="@drawable/ic_warning"
-        android:id="@+id/warning_notification"/>
+        android:id="@+id/warning_notification"
+        app:drawableLeftCompat="@drawable/ic_warning" />
 
     <LinearLayout
         android:layout_width="match_parent"
