--- a/app/src/main/res/layout/custom_word_dialog.xml
+++ b/app/src/main/res/layout/custom_word_dialog.xml
@@ -1,29 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/dialog_toolbar_division"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:id="@+id/dialog_main_word"
-        android:textSize="50dp"
-        android:gravity="center"
-        android:textStyle="bold">
+        android:textSize="40sp"
+        android:text="Test"
+        android:gravity="center_horizontal"
+        android:textStyle="bold"
+        app:layout_constraintVertical_chainStyle="packed"
+        android:layout_marginBottom="10dp">
     </TextView>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:id="@+id/dialog_toolbar_division"
-        android:layout_below="@+id/main_toolbar"/>
+        app:layout_constraintTop_toBottomOf="@id/dialog_main_word"
+        app:layout_constraintBottom_toTopOf="@id/mean_recyclerview"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="10dp">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/black"
+            android:layout_gravity="center">
+
+        </View>
+    </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/mean_recyclerview"
-        tools:listitem="@layout/dialog_custom_item">
+        app:layout_constraintTop_toBottomOf="@id/dialog_toolbar_division"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:listitem="@layout/dialog_custom_item"
+        android:layout_marginBottom="5dp">
 
     </androidx.recyclerview.widget.RecyclerView>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
