리팩토링 커밋
1. WordInsertFragment 코드 리팩토링

- 자잘한 반복문부터, 예외 처리까지 하는 중.
- 기존 addView -> RecyclerView Item 추가하는 방식
- BindingAdapter + 양방향 데이터 결합을 통한 데이터 처리 방식 구현 중

2. 그 밖에 다른 것들도 해야하는데..

--- a/app/src/main/res/drawable/edittext_selector_design.xml
+++ b/app/src/main/res/drawable/edittext_selector_design.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_focused="true">
+    <item android:state_selected="true">
         <shape android:shape="rectangle">
             <stroke
                 android:color="@color/focused_color"
@@ -10,7 +10,7 @@
         </shape>
     </item>
 
-    <item android:state_focused="false">
+    <item android:state_selected="false">
         <shape android:shape="rectangle">
             <stroke
                 android:color="@color/main_theme_blue"
