--- a/app/src/main/res/layout/custom_word_dialog.xml
+++ b/app/src/main/res/layout/custom_word_dialog.xml
@@ -7,7 +7,7 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/dialog_toolbar_division"
         app:layout_constraintStart_toStartOf="parent"
@@ -15,7 +15,7 @@
         android:id="@+id/dialog_main_word"
         android:textSize="40sp"
         android:text="Test"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         android:textStyle="bold"
         app:layout_constraintVertical_chainStyle="packed"
         android:layout_marginBottom="10dp">
@@ -46,7 +46,6 @@
         android:layout_height="wrap_content"
         android:id="@+id/mean_recyclerview"
         app:layout_constraintTop_toBottomOf="@id/dialog_toolbar_division"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         tools:listitem="@layout/dialog_custom_item"
