--- a/app/src/main/res/layout/design_insert_form.xml
+++ b/app/src/main/res/layout/design_insert_form.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,7 +12,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/insert_form_spinner"
-        android:entries="@array/insert_spinner_array"/>
+        android:entries="@array/insert_spinner_array"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/insert_mean_edittext"
+        app:layout_constraintHorizontal_chainStyle="packed" />
 
     <EditText
         android:id="@+id/insert_mean_edittext"
@@ -18,7 +25,10 @@
         android:layout_height="wrap_content"
         android:background="@drawable/edittext_selector_design"
         android:hint="@string/mean_hint"
-        android:layout_toRightOf="@+id/insert_form_spinner"
-        android:layout_marginLeft="20dp"/>
+        android:layout_marginStart="20dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/insert_form_spinner"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
