리팩토링 커밋
1. WordInsertFragment 코드 리팩토링

- Insert 부분 RecyclerView로 1차 변경 완료
- Insert Spinner, EditText 양방향 데이터 결합 처리 중(in Adapter)
- 기타 수정 사항 수정 및 모듈 화

2. 그 밖에 다른 것들도 해야하는데..

--- a/app/src/main/res/layout/fragment_word_insert.xml
+++ b/app/src/main/res/layout/fragment_word_insert.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.engwordlockscreen.presentation.main.WordViewModel" />
+    </data>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -39,14 +45,14 @@
             android:layout_weight="1"/>
     </LinearLayout>
 
-    <LinearLayout
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/word_mean_insert"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/mean_button_list"
-        android:orientation="vertical">
+        android:setInsertList="@{viewModel.insertWordList}">
 
-    </LinearLayout>
+    </androidx.recyclerview.widget.RecyclerView>
 
     <LinearLayout
         android:id="@+id/insert_button_set"
@@ -71,3 +77,5 @@
 
 
 </RelativeLayout>
+
+</layout>
