--- a/app/src/main/res/layout/design_insert_form.xml
+++ b/app/src/main/res/layout/design_insert_form.xml
@@ -1,34 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:layout_marginTop="10dp">
-
-    <Spinner
-        android:layout_width="wrap_content"
+<layout>
+    <data>
+        <variable
+            type="kotlinx.coroutines.flow.StateFlow"
+            name="part"/>
+        <variable
+            type="kotlinx.coroutines.flow.StateFlow"
+            name="mean" />
+    </data>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/insert_form_spinner"
-        android:entries="@array/insert_spinner_array"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/insert_mean_edittext"
-        app:layout_constraintHorizontal_chainStyle="packed" />
+        android:gravity="center"
+        android:layout_marginTop="10dp">
 
-    <EditText
-        android:id="@+id/insert_mean_edittext"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/edittext_selector_design"
-        android:hint="@string/mean_hint"
-        android:layout_marginStart="20dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/insert_form_spinner"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        <Spinner
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/insert_form_spinner"
+            android:entries="@array/insert_spinner_array"
+            selectedValue="@={part}"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/insert_mean_edittext"
+            app:layout_constraintHorizontal_chainStyle="packed" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <EditText
+            android:id="@+id/insert_mean_edittext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/edittext_selector_design"
+            android:hint="@string/mean_hint"
+            android:layout_marginStart="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/insert_form_spinner"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
