리팩토링 커밋
1. WordInsertFragment 코드 리팩토링

- Insert Fragment에서 List 추가할 때마다, List 값 변할 수 있도록 만듬.

- 양방향 데이터 결합 간 StateFlow가 수집을 하지 못하는 점에 대해
  원인 분석 및 실제 value 값은 갱신되어 있는 상황이 이상...하다..

2. 그 밖에 다른 것들도 해야하는데..

--- a/app/src/main/res/layout/fragment_word_insert.xml
+++ b/app/src/main/res/layout/fragment_word_insert.xml
@@ -19,6 +19,7 @@
         android:layout_marginTop="10dp"
         android:background="@drawable/edittext_selector_design"
         android:hint="@string/word_hint"
+        android:text="@={viewModel._word}"
         android:gravity="center"/>
 
     <LinearLayout
