--- a/app/src/main/res/layout/design_insert_form.xml
+++ b/app/src/main/res/layout/design_insert_form.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
     <data>
+        <import type="kotlinx.coroutines.flow.MutableStateFlow"/>
+        <import type="com.example.engwordlockscreen.domain.database.WordEntities"/>
         <variable
-            type="kotlinx.coroutines.flow.StateFlow"
-            name="part"/>
-        <variable
-            type="kotlinx.coroutines.flow.StateFlow"
-            name="mean" />
+            type="MutableStateFlow&lt;WordEntities>"
+            name="word"/>
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -22,12 +21,12 @@
             android:layout_height="wrap_content"
             android:id="@+id/insert_form_spinner"
             android:entries="@array/insert_spinner_array"
-            selectedValue="@={part}"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/insert_mean_edittext"
-            app:layout_constraintHorizontal_chainStyle="packed" />
+            app:layout_constraintHorizontal_chainStyle="packed"
+            selectedValue="@={word.parts}"/>
 
         <EditText
             android:id="@+id/insert_mean_edittext"
@@ -39,7 +38,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/insert_form_spinner"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            android:text="@={word.mean}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
