리팩토링 커밋
1. WordInsertFragment 코드 리팩토링

- 양방향 데이터 결합 간 WordEntities Data Class를 다루는 InverseBindingAdapter 제작 완료.

2. 기타 고칠만한 사항 고침.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,8 @@
             android:text="@string/main_title"
             android:textColor="@color/white"
             android:textSize="20dp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:id="@+id/main_toolbar_title"/>
     </androidx.appcompat.widget.Toolbar>
 
     <LinearLayout
